<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/commodity_details_item_view_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<TextView
    android:id="@+id/commodityNameTitle"
    android:layout_width="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    android:text="@string/commodity_name"
    android:textAlignment="viewStart"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/placeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/cardview_dark_background"
        app:layout_constraintTop_toBottomOf="@+id/commodityNameTitle"
        android:text="@string/place" />
    <TextView
        android:id="@+id/state"
        app:layout_constraintTop_toBottomOf="@id/placeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:text="@string/state"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/district"
        app:layout_constraintTop_toBottomOf="@id/state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:text="@string/district"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/market"
        app:layout_constraintTop_toBottomOf="@id/district"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/market"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/price"
        app:layout_constraintTop_toBottomOf="@id/market"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:text="@string/price"
        android:textColor="@color/white"
        android:background="@color/cardview_dark_background"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/min_price"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:text="@string/min_price"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/max_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_price"
        app:layout_constraintTop_toBottomOf="@+id/min_price"
        />
    <TextView
        android:id="@+id/modal_price"
        app:layout_constraintTop_toBottomOf="@id/max_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:text="@string/modal_price"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/modal_price"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="viewStart"
        android:text="@string/arrival_date"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>